Pom:  - added required plug-ins for testing, deployment;  - added specific version of AWS API (see https://github.com/aws/aws-sdk-java/issues/1611).
RansomisedCyclicIterator:
 - added/refactored from CyclicIterator to shuffle the underlying list.

AuroraReadonlyEndpoint:
 - better logging;
 - Use Region instead of Regions.

AuroraReadReplicasDriver:
 - JDBC format chaged to prevent driver conflict: "jdbc:auroraro:(?<delegate>[^:]*):(?<uri>.*\\/\\/.+)";
 - Storing AtomicReference to last replica URI used to prevent over-use;
 - Read AWS region from either of: Properties, Command line options, Environment variable.

Relevant tests changes.