@@ -40,15 +40,29 @@
 		</developer>
 	</developers>
 
-	<properties>
-		<aws.rds.sdk>1.11.421</aws.rds.sdk>
-	</properties>
+        <properties>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <maven.compiler.source>1.8</maven.compiler.source>
+            <maven.compiler.target>1.8</maven.compiler.target>
+        </properties>
+
+
+        <distributionManagement>
+            <repository>
+                <id>s3.release</id>
+                <url>s3://repo.imggaming.com/master-builds</url>
+            </repository>
+            <snapshotRepository>
+                <id>s3.snapshot</id>
+                <url>s3://repo.imggaming.com/snapshots</url>
+            </snapshotRepository>
+        </distributionManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-rds</artifactId>
-			<version>${aws.rds.sdk}</version>
+                        <version>1.11.251</version>
 		</dependency>
                 <dependency>
                     <groupId>junit</groupId>
@@ -89,10 +103,23 @@
                     <version>1.7.3</version>
                     <scope>test</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>log4j-over-slf4j</artifactId>
+                    <version>1.7.21</version>
+                    <type>jar</type>
+                </dependency>
         </dependencies>
 
 	<build>
-		<plugins>
+            <extensions>
+                <extension>
+                    <groupId>org.kuali.maven.wagons</groupId>
+                    <artifactId>maven-s3-wagon</artifactId>
+                    <version>1.2.1</version>
+                </extension>
+            </extensions>
+                <plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -105,9 +132,16 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
-                            <version>2.22.0</version>
+                            <version>2.20.1</version>
+                            <configuration>
+                                <testFailureIgnore>false</testFailureIgnore>
+                                <trimStackTrace>false</trimStackTrace>
+                                <forkCount>1</forkCount>
+                                <reuseForks>false</reuseForks>
+                                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            </configuration>
                         </plugin>
                 </plugins>
-	</build>
+        </build>
 
 </project>
